i added a retailprice program just noe

--- a/BasicProgramsforC++/BasicProgramsforC++.vcxproj.filters
+++ b/BasicProgramsforC++/BasicProgramsforC++.vcxproj.filters
@@ -15,7 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="HealthMembership.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cupTofluidOunces.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="retailPrice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
