--- a/BasicProgramsforC++/BasicProgramsforC++.vcxproj
+++ b/BasicProgramsforC++/BasicProgramsforC++.vcxproj
@@ -139,7 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="cupTofluidOunces.cpp" />
+    <ClCompile Include="HealthMembership.cpp" />
+    <ClCompile Include="retailPrice.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
